--- a/source/partials/_subscribe_box.html.erb
+++ b/source/partials/_subscribe_box.html.erb
@@ -15,5 +15,8 @@
     <% link_to 'http://www.facebook.com/rwpod', class: "link", title: "facebook", "aria-label" => "Follow us at facebook" do %>
       <%= svg_sprite 'facebook' %>
     <% end %>
+    <% link_to 'https://t.me/rwpod', class: "link", title: "telegram", "aria-label" => "Join our telegram chat" do %>
+      <%= svg_sprite 'telegram' %>
+    <% end %>
   </div>
 </div>
