--- a/webpack/css/components/layout.sass
+++ b/webpack/css/components/layout.sass
@@ -59,6 +59,10 @@ header.header
   float: left
   width: 33.3333%
 
+.sidebar .sidebar-button-icon
+  vertical-align: middle
+  padding-bottom: 4px
+
 footer.footer
   background: #087c78
   color: #fff
