lazy load comments

--- a/webpack/css/components/layout.sass
+++ b/webpack/css/components/layout.sass
@@ -63,6 +63,9 @@ header.header
   vertical-align: middle
   padding-bottom: 4px
 
+#disqus_thread
+  min-height: 100px
+
 footer.footer
   background: #087c78
   color: #fff
