--- a/source/partials/_sidebar.html.erb
+++ b/source/partials/_sidebar.html.erb
@@ -1,4 +1,4 @@
-<div class="by-center mbm">
+<div class="mbm">
   <h3 class="mbs">Есть чем поделиться с нами?</h3>
 
   <% link_to mail_to_hex(default_email_helper), class: 'button mbs' do %>
