target top for mailto

--- a/source/partials/_sidebar.html.erb
+++ b/source/partials/_sidebar.html.erb
@@ -1,7 +1,7 @@
 <div class="mbm">
   <h3 class="mbs">Есть чем поделиться с нами?</h3>
 
-  <% link_to mail_to_hex(default_email_helper), class: 'button mbs' do %>
+  <% link_to mail_to_hex(default_email_helper), class: 'button mbs', target: '_top' do %>
     <%= svg_sprite 'envelope', class: 'sidebar-button-icon' %>
     Написать на почту
   <% end %>
