--- a/webpack/css/objects/audio.sass
+++ b/webpack/css/objects/audio.sass
@@ -23,13 +23,17 @@
   height: 18px
 
 .track-details-info
-  font-size: 0.9rem
   display: flex
   flex-grow: 1
-  text-align: center
+  flex-flow: row wrap
   align-items: center
   justify-content: center
   word-break: break-word
+  padding-left: 10px
+
+.track-details-info__item
+  font-size: 0.9rem
+  flex: 1
 
 .footer-audio-player
   display: flex
