--- a/source/partials/_article.html.erb
+++ b/source/partials/_article.html.erb
@@ -8,7 +8,11 @@
   <div class="row">
     <div class="col1of4 prs">
       <%= image_tag "#{article_img}?width=#{article_img_size}&height=#{article_img_size}",
-          srcset: "#{article_img}?width=#{article_img_size}&height=#{article_img_size}, #{article_img}?width=#{article_img_size * 2}&height=#{article_img_size * 2} 2x",
+          srcset: [
+            "#{article_img}?width=#{article_img_size}&height=#{article_img_size}",
+            "#{article_img}?width=#{(article_img_size * 1.5).round}&height=#{(article_img_size * 1.5).round} 1.5x",
+            "#{article_img}?width=#{article_img_size * 2}&height=#{article_img_size * 2} 2x"
+          ].join(","),
           alt: article.title,
           title: article.title,
           loading: 'lazy',
