--- a/webpack/css/objects/article.sass
+++ b/webpack/css/objects/article.sass
@@ -14,7 +14,7 @@
     border: 1px solid #d2cec3
     width: 100%
     height: auto
-    aspect-ratio: attr(width) / attr(height)
+    aspect-ratio: 1/1
 
 @media screen and (max-width: 460px)
   .article img
