--- a/source/partials/_footer_audio_player.html.erb
+++ b/source/partials/_footer_audio_player.html.erb
@@ -1,4 +1,4 @@
-<div id="footerAudioPlayer" class="footer-audio-player footer-audio-player__hidden" data-turbolinks-permanent>
+<div id="footerAudioPlayer" class="footer-audio-player footer-audio-player__hidden" data-turbo-permanent>
   <div class="footer-audio-player-cover"></div>
   <div class="footer-audio-player-container"></div>
   <button class="footer-audio-player-close-button">
