back to turbolinks

--- a/source/layouts/layout.html.erb
+++ b/source/layouts/layout.html.erb
@@ -51,7 +51,7 @@
         <meta property="og:audio" content="<%= current_article.data.audio_url %>">
         <meta property="og:audio:type" content="<%= current_article.data.audio_format %>">
       <% end %>
-      <meta name="turbo-cache-control" content="no-cache" />
+      <meta name="turbolinks-cache-control" content="no-cache" />
     <% end %>
     <!-- GA BEGIN -->
     <script type="text/javascript">
