--- a/source/partials/_footer_audio_player.html.erb
+++ b/source/partials/_footer_audio_player.html.erb
@@ -1,7 +1,7 @@
-<div id="footerAudioPlayer" class="footer-audio-player footer-audio-player__hidden" data-turbo-permanent>
-  <div class="footer-audio-player-cover"></div>
-  <div class="footer-audio-player-container"></div>
-  <button class="footer-audio-player-close-button">
+<div id="footerAudioPlayer" class="footer-audio-player footer-audio-player__hidden" data-controller="audio" data-turbolinks-permanent>
+  <div class="footer-audio-player-cover" data-audio-target="cover"></div>
+  <div class="footer-audio-player-container" data-audio-target="container"></div>
+  <button class="footer-audio-player-close-button" data-action="click->audio#closePlayer">
     <%= svg_sprite 'close' %>
   </button>
 </div>
