--- a/source/partials/_sw_notification.html.erb
+++ b/source/partials/_sw_notification.html.erb
@@ -1,12 +1,12 @@
-<div id="swNotification" class="sw-notification" style="justify-content: flex-start; align-items: flex-end;" data-turbolinks-permanent>
-  <div class="sw-notification__toast sw-notification__hidden sw-notification__toast--dismissible sw-notification__toast--upper sw-notification__toast--success">
+<div id="swNotification" class="sw-notification" data-controller="service-worker" style="justify-content: flex-start; align-items: flex-end;" data-turbolinks-permanent>
+  <div class="sw-notification__toast sw-notification__hidden sw-notification__toast--dismissible sw-notification__toast--upper sw-notification__toast--success" data-service-worker-target="toast">
     <div class="sw-notification__wrapper">
       <div class="sw-notification__icon">
         <i class="sw-notification__icon--success"></i>
       </div>
-      <div class="sw-notification__message">New version available. Click to update</div>
+      <div class="sw-notification__message" data-action="click->service-worker#reloadPage">New version available. Click to update</div>
       <div class="sw-notification__dismiss">
-        <button class="sw-notification__dismiss-btn"></button>
+        <button class="sw-notification__dismiss-btn" data-action="click->service-worker#dismiss"></button>
       </div>
     </div>
     <div class="sw-notification__ripple"></div>
