--- a/source/layouts/layout.html.erb
+++ b/source/layouts/layout.html.erb
@@ -65,7 +65,7 @@
     </script>
     <!-- GA END -->
 
-    <script src="https://cse.google.com/cse.js?cx=b0e57ad6eb10395a2" defer="defer" crossorigin="anonymous"></script>
+    <script src="https://cse.google.com/cse.js?cx=b0e57ad6eb10395a2" async="async" defer="defer"></script>
 
     <%= javascript_pack_tag "app" %>
     <%= stylesheet_pack_tag "app" %>
