--- a/source/partials/_sidebar.html.erb
+++ b/source/partials/_sidebar.html.erb
@@ -1,7 +1,7 @@
 <div class="mbm">
   <h3 class="mbs">Поиск</h3>
 
-  <div class="gcse-search"></div>
+  <div data-controller="search"></div>
 
   <h3 class="mbs">Контакты</h3>
 
