--- a/webpack/css/app.sass
+++ b/webpack/css/app.sass
@@ -17,4 +17,5 @@
 @import "objects/tags"
 @import "objects/svg_icons"
 @import "objects/audio"
+@import "objects/search_box"
 @import "objects/sw_notification"
