add search on website

--- a/source/partials/_search_block.html.erb
+++ b/source/partials/_search_block.html.erb
@@ -1,6 +1,6 @@
 <div data-controller="search">
   <button class="button mbs mrs search-box-button" data-action="click->search#openSearch">
-    <%= svg_sprite 'search', class: 'sidebar-button-icon search-box-button--icon' %> Поиск
+    <%= svg_sprite 'search', class: 'sidebar-button-icon' %> Поиск
   </button>
 
   <div class="search-box-container" data-search-target="container" data-action="mousedown->search#closeOutsideSearch touchstart->search#closeOutsideSearch">
