--- a/webpack/css/objects/search_box.sass
+++ b/webpack/css/objects/search_box.sass
@@ -1,9 +1,9 @@
 .search-box-button
   background: none
 
-.search-box-button--icon
-  width: 15px
-  height: 15px
+  .svg-icon
+    width: 25px
+    height: 16px
 
 .search-box-container
   display: none
