--- a/webpack/css/objects/search_box.sass
+++ b/webpack/css/objects/search_box.sass
@@ -43,6 +43,10 @@
   border: 1px solid #CCC
   height: 50px
 
+.search-box-container--input:focus
+  border-color: #832f17
+  outline: none
+
 .search-box-container--input:focus:not(:focus-visible)
   outline: none
 
