--- a/webpack/css/objects/search_box.sass
+++ b/webpack/css/objects/search_box.sass
@@ -5,6 +5,9 @@
     width: 25px
     height: 16px
 
+.search-box-button:focus:not(:focus-visible)
+  outline: none
+
 .search-box-container
   display: none
   position: fixed
