--- a/source/layouts/layout.html.erb
+++ b/source/layouts/layout.html.erb
@@ -93,15 +93,12 @@
 
   <footer class="footer">
     <div class="container row pam">
-      <div class="col1of2">
-        &copy;
-        <%= default_footer_copyright_helper %>
-        &nbsp;
+      <div class="col1of4">
         <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">
-          <img alt="Creative Commons License" style="border-width:0" src="https://licensebuttons.net/l/by-nc-nd/4.0/80x15.png" width="80" height="15" />
+          <img alt="Creative Commons License" style="border-width:0" src="https://licensebuttons.net/l/by-nc-nd/4.0/80x15.png" width="80" height="15" loading="lazy" />
         </a>
       </div>
-      <div class="col1of2">
+      <div class="col3of4">
         <%= partial "partials/footer_links" %>
       </div>
     </div>
