--- a/source/partials/_sw_notification.html.erb
+++ b/source/partials/_sw_notification.html.erb
@@ -6,7 +6,7 @@
       </div>
       <div class="sw-notification__message" data-action="click->service-worker#reloadPage">New version available. Click to update</div>
       <div class="sw-notification__dismiss">
-        <button class="sw-notification__dismiss-btn" data-action="click->service-worker#dismiss"></button>
+        <button class="sw-notification__dismiss-btn" aria-label="Close update notification" data-action="click->service-worker#dismiss"></button>
       </div>
     </div>
     <div class="sw-notification__ripple"></div>
