--- a/source/partials/_audio_info.html.erb
+++ b/source/partials/_audio_info.html.erb
@@ -1,5 +1,5 @@
 <div class="track-controls-and-info">
-  <button class="track-play-button" data-audio-url="<%= article.data.audio_url %>" data-title="<%= article.title %>" data-image="<%= article.data.main_image %>" data-link="<%= url_for(article) %>">
+  <button class="track-play-button" aria-label="Play podcast audio" data-audio-url="<%= article.data.audio_url %>" data-title="<%= article.title %>" data-image="<%= article.data.main_image %>" data-link="<%= url_for(article) %>">
     <%= svg_sprite 'play' %>
   </button>
   <div class="track-details-info">
