--- a/source/partials/_search_block.html.erb
+++ b/source/partials/_search_block.html.erb
@@ -1,5 +1,5 @@
 <div data-controller="search">
-  <button class="button mbs mrs search-box-button" data-action="click->search#openSearch">
+  <button class="button mbs mrs search-box-button" aria-label="Search on website" data-action="click->search#openSearch">
     <%= svg_sprite 'search', class: 'sidebar-button-icon' %> Поиск
   </button>
 
@@ -9,7 +9,7 @@
         <form data-action="submit->search#doSearch">
           <div class="search-box-container--form-wrapper">
             <input type="text" autocomplete="off" dir="ltr" spellcheck="false" class="search-box-container--input" placeholder="Поиск..." data-search-target="input" data-action="keydown->search#closeOnEscape" />
-            <button type="button" class="search-box-container--button" data-action="click->search#closeSearch">
+            <button type="button" aria-label="Close search on website" class="search-box-container--button" data-action="click->search#closeSearch">
               <%= svg_sprite 'close' %>
             </button>
           </div>
