--- a/source/partials/_sw_notification.html.erb
+++ b/source/partials/_sw_notification.html.erb
@@ -1,4 +1,4 @@
-<div id="swNotification" class="sw-notification" data-controller="service-worker" style="justify-content: flex-start; align-items: flex-end;" data-turbolinks-permanent>
+<div id="swNotification" class="sw-notification" data-controller="service-worker" style="justify-content: flex-start; align-items: flex-end;" data-turbo-permanent>
   <div class="sw-notification__toast sw-notification__hidden sw-notification__toast--dismissible sw-notification__toast--upper sw-notification__toast--success" data-service-worker-target="toast">
     <div class="sw-notification__wrapper">
       <div class="sw-notification__icon">
