--- a/webpack/css/app.sass
+++ b/webpack/css/app.sass
@@ -17,5 +17,5 @@
 @import "objects/tags"
 @import "objects/svg_icons"
 @import "objects/audio"
-@import "objects/search_box"
+@import "objects/search"
 @import "objects/sw_notification"
