--- a/webpack/css/objects/search.sass
+++ b/webpack/css/objects/search.sass
@@ -2,8 +2,8 @@
   background: none
 
   .svg-icon
-    width: 25px
-    height: 16px
+    width: 1.4rem
+    height: 0.9rem
 
 .search-box-button:focus:not(:focus-visible)
   outline: none
