--- a/webpack/css/objects/svg_icons.sass
+++ b/webpack/css/objects/svg_icons.sass
@@ -1,8 +1,8 @@
 .svg-icon
   position: relative
   display: inline-block
-  width: 25px
-  height: 25px
+  width: 1.38rem
+  height: 1.38rem
   overflow: hidden
   fill: currentColor
 
@@ -14,20 +14,20 @@
   pointer-events: none
 
 .svg-icon--m
-  width: 50px
-  height: 50px
+  width: 2.77rem
+  height: 2.77rem
 
 .svg-icon--l
-  width: 100px
-  height: 100px
+  width: 5.55rem
+  height: 5.55rem
 
 .svg-icon--xl
-  width: 150px
-  height: 150px
+  width: 8.33rem
+  height: 8.33rem
 
 .svg-icon--xxl
-  width: 200px
-  height: 200px
+  width: 11.11rem
+  height: 11.11rem
 
 .svg-icon__spinner
   position: absolute
