--- a/webpack/css/objects/subscribe.sass
+++ b/webpack/css/objects/subscribe.sass
@@ -1,27 +1,27 @@
 .subscribe
   max-width: 960px
   margin: 0 auto
-  padding: 14px 20px
+  padding: 0.77rem 1.11rem
   display: grid
   grid-gap: 0
   grid-template-columns: minmax(150px, 1fr) 90px 135px
   .link
     display: inline-block
-    padding: 7px 0 2px 0
-    width: 40px
+    padding: 0.38rem 0 0.11rem 0
+    width: 2.22rem
     text-align: center
     background: #d26748
     color: #fff
     border-radius: 50%
-    margin-right: 5px
+    margin-right: 0.27rem
     transition: background .3s ease
     &:hover
       background: darken(#d26748, 15%)
       .svg-icon
         fill: #a4f5f1
     .svg-icon
-      width: 25px
-      height: 25px
+      width: 1.4rem
+      height: 1.4rem
       fill: #fff
 
 @media screen and (max-width: 768px)
