--- a/source/layouts/layout.html.erb
+++ b/source/layouts/layout.html.erb
@@ -58,7 +58,7 @@
       <meta name="turbo-cache-control" content="no-cache" />
     <% end %>
     <!-- GA BEGIN -->
-    <script type="text/javascript">
+    <script type="text/javascript" data-turbo-eval="false">
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -69,8 +69,8 @@
     </script>
     <!-- GA END -->
 
-    <%= javascript_pack_tag "app" %>
     <%= stylesheet_pack_tag "app" %>
+    <%= javascript_pack_tag "app" %>
 </head>
 <body>
 
