--- a/webpack/css/app.sass
+++ b/webpack/css/app.sass
@@ -1,9 +1,11 @@
+@charset "UTF-8"
+
 @import "base/normalize"
 @import "base/grid"
 @import "base/spaces"
 @import "base/helpers"
 
-@import "plyr/dist/plyr.css"
+@import "plyr/src/sass/plyr.scss"
 
 @import "components/typography"
 @import "components/layout"
