--- a/source/layouts/layout.html.erb
+++ b/source/layouts/layout.html.erb
@@ -58,14 +58,13 @@
       <meta name="turbo-cache-control" content="no-cache" />
     <% end %>
     <!-- GA BEGIN -->
-    <script type="text/javascript" data-turbo-eval="false">
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YCVPPMMQMB"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
-      ga('create', 'UA-37809843-1', 'rwpod.com');
-      ga('send', 'pageview');
+      gtag('config', 'G-YCVPPMMQMB');
     </script>
     <!-- GA END -->
 
