update rss styling

--- a/source/feeds/rss.xsl.erb
+++ b/source/feeds/rss.xsl.erb
@@ -70,7 +70,7 @@
 						<tr style="border-bottom:1px black solid;">
 							<th>Title</th>
 							<th>Media URL</th>
-							<th>Publication date (GMT)</th>
+							<th>Publication date</th>
 						</tr>
 						<xsl:for-each select="rss/channel/item">
               <xsl:variable name="itemURL">
