--- a/source/feeds/sitemap.xsl.erb
+++ b/source/feeds/sitemap.xsl.erb
@@ -72,7 +72,7 @@
 							<th>URL</th>
 							<th>Priority</th>
 							<th>Change Frequency</th>
-							<th>LastChange (GMT)</th>
+							<th>Last Change</th>
 						</tr>
 						<xsl:variable name="lower" select="'abcdefghijklmnopqrstuvwxyz'"/>
 						<xsl:variable name="upper" select="'ABCDEFGHIJKLMNOPQRSTUVWXYZ'"/>
