--- a/source/layouts/layout.html.erb
+++ b/source/layouts/layout.html.erb
@@ -35,7 +35,7 @@
       <meta property="og:image:height" content="600" />
       <meta name="twitter:creator" content="@rwpod" />
       <meta name="twitter:site" content="@rwpod" />
-      <meta name="twitter:text:title" content="<%= current_article.title %>" />
+      <meta name="twitter:title" content="<%= current_article.title %>" />
       <% if current_article.data.main_image %>
         <meta name="twitter:image" content="<%= full_url(current_article.data.main_image) %>" />
       <% end %>
