--- a/source/layouts/layout.html.erb
+++ b/source/layouts/layout.html.erb
@@ -24,6 +24,7 @@
     <% if is_blog_article? %>
       <meta property="og:type" content="article" />
       <meta property="og:title" content="<%= current_article.title %>" />
+      <meta property="og:description" content="<%= current_article.title %>" />
       <meta property="og:url" content="<%= full_url(current_article.url) %>" />
       <meta property="article:published_time" content="<%= current_article.date.iso8601(3) %>" />
       <meta property="article:modified_time" content="<%= current_article.date.iso8601(3) %>" />
@@ -36,10 +37,12 @@
       <meta name="twitter:creator" content="@rwpod" />
       <meta name="twitter:site" content="@rwpod" />
       <meta name="twitter:title" content="<%= current_article.title %>" />
+      <meta name="twitter:description" content="<%= current_article.title %>" />
       <% if current_article.data.main_image %>
         <meta name="twitter:image" content="<%= full_url(current_article.data.main_image) %>" />
+        <meta name="twitter:image:alt" content="<%= current_article.title %>" />
       <% end %>
-      <meta name="twitter:card" content="summary_large_image" />
+      <meta name="twitter:card" content="summary" />
       <% if current_article.data.audio_url %>
         <meta property="og:audio" content="<%= current_article.data.audio_url %>">
         <meta property="og:audio:type" content="<%= current_article.data.audio_format %>">
