--- a/source/layouts/layout.html.erb
+++ b/source/layouts/layout.html.erb
@@ -31,6 +31,7 @@
       <meta property="og:site_name" content="RWpod" />
       <% if current_article.data.main_image %>
         <meta property="og:image" content="<%= full_url(current_article.data.main_image) %>" />
+        <meta property="og:image:alt" content="<%= current_article.title %>" />
       <% end %>
       <meta property="og:image:width" content="600" />
       <meta property="og:image:height" content="600" />
