use manifest.webmanifest

--- a/source/layouts/layout.html.erb
+++ b/source/layouts/layout.html.erb
@@ -15,7 +15,7 @@
     <link rel="icon" href="/favicon.ico" sizes="any" /><!-- 32×32 -->
     <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" /><!-- 180×180 -->
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="/manifest.webmanifest" />
 
     <!-- rss -->
     <link href="<%= full_url('/rss.xml') %>" rel="alternate" title="<%=h default_title_helper %>" type="application/rss+xml" />
