--- a/source/layouts/layout.html.erb
+++ b/source/layouts/layout.html.erb
@@ -61,8 +61,8 @@
     </script>
     <!-- GA END -->
 
-    <%= stylesheet_pack_tag "app" %>
-    <%= javascript_pack_tag "app" %>
+    <%= external_pipeline_stylesheet_tag :webpack, ['app.css', 'src'], media: 'all' %>
+    <%= external_pipeline_javascript_tag :webpack, ['app.js', 'src'], defer: 'defer', async: 'async', 'data-turbo-track' => 'reload' %>
 </head>
 <body>
 
