--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,13 @@
 ---
 import AppLayout from '@layouts/app.astro'
 ---
+<style>
+  p {
+    color: red;
+  }
+</style>
+
 <AppLayout>
   <p>My page content, wrapped in a layout!</p>
+  <p>Read more <a href="/">home</a> Astro!</p>
 </AppLayout>
