--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,4 +3,5 @@ import AppLayout from '@layouts/app.astro'
 ---
 <AppLayout>
   <p>My page content, wrapped in a layout!</p>
+  <p>Read more <a href="/about/" data-turbo-preload="true">about</a> Astro!</p>
 </AppLayout>
