--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,6 @@
 ---
 import AppLayout from '@layouts/app.astro'
-import { route } from '@utils/helpers'
+import { pageRoute } from '@utils/helpers'
 ---
 <style>
   p {
@@ -10,5 +10,5 @@ import { route } from '@utils/helpers'
 
 <AppLayout>
   <p>My page content, wrapped in a layout!</p>
-  <p>Read more <a href={route('/')}>home</a> Astro!</p>
+  <p>Read more <a href={pageRoute('/')}>home</a> Astro!</p>
 </AppLayout>
