--- a/src/pages/posts/[pubYear]/[pubMonth]/[pubDay]/[slug].astro
+++ b/src/pages/posts/[pubYear]/[pubMonth]/[pubDay]/[slug].astro
@@ -1,26 +1,20 @@
 ---
 import AppLayout from '@layouts/app.astro'
-import { getPosts, getPostByParams } from '@utils/helpers'
+import { getPosts } from '@utils/helpers'
 
 export const getStaticPaths = () => (
-  getPosts().map(({
-    frontmatter: {
-      pubYear,
-      pubMonth,
-      pubDay,
-      slug
-    }
-  }) => ({
+  getPosts().map((post) => ({
     params: {
-      pubYear,
-      pubMonth,
-      pubDay,
-      slug
-    }
+      pubYear: post.frontmatter.pubYear,
+      pubMonth: post.frontmatter.pubMonth,
+      pubDay: post.frontmatter.pubDay,
+      slug: post.frontmatter.slug
+    },
+    props: { post }
   }))
 )
 
-const post = getPostByParams(Astro.params)
+const { post } = Astro.props
 ---
 <AppLayout title={post.title}>
   <h2>{post.title}</h2>
