--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import AppLayout from '@layouts/app.astro'
-import { pageRoute } from '@utils/helpers'
+import { pageRoute } from '@utils/links'
 ---
 <AppLayout>
   <p>My page content, wrapped in a layout!</p>
