--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,11 +4,15 @@ import { pageRoute } from '@utils/links'
 
 const { pathname } = new URL(Astro.request.url)
 
-const navigationClasses = (path = '/') => {
+const navigationClasses = (path = '/', isRight = false) => {
   let classes = ['navigation-item']
 
   if (pathname === pageRoute(path)) {
     classes = [...classes, 'navigation-item__active']
+  }
+
+  if (isRight) {
+    classes = [...classes, 'navigation-item__right']
   }
 
   return classes.join(' ')
@@ -17,61 +21,48 @@ const navigationClasses = (path = '/') => {
 
 <style>
   .header {
-    background: hsl(42deg 28% 84%);
-    height: 98px;
-    margin: 60px 0;
+    display: flex;
+    justify-content: center;
+    padding: 3.5rem 0;
     position: relative;
   }
 
-  .logo-wrapper {
-    left: 50%;
-    margin-left: -132px;
-    position: absolute;
-    top: -49px;
-  }
-
-  .logo {
-    height: 195px;
-    width: 258px;
-  }
-
-  .left-side, .right-side {
-    padding: 36px 0;
-    width: 37%;
-  }
-
-  .left-side {
-    float: left;
-  }
-
-  .right-side {
-    float: right;
+  .navigation-wrapper {
+    background: hsl(42deg 28% 84%);
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: center;
   }
 
   .navigation {
+    display: flex;
+    flex-direction: row;
     list-style: none;
+    justify-content: space-around;
+    align-items: center;
+    gap: 1.5rem;
+    padding: 1.5rem;
     margin: 0;
-    z-index: 100;
+    height: 6.1rem;
+    max-width: 70rem;
   }
 
-  .left-side .navigation {
-    float: right;
+  .logo-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 0.5rem;
+    order: 1;
   }
 
-  .right-side .navigation {
-    float: left;
+  .navigation-item__right {
+    order: 2;
   }
 
-  .navigation-item {
-    display: inline-block;
-    min-height: 36px;
-    padding: 0 15px;
-  }
-
-  .menu-toggle {
-    display: none;
-    font-size: 1.5rem;
-    margin-left: 40px;
+  .logo {
+    aspect-ratio: 86 / 65;
+    width: 16.125rem;
   }
 
   .navigation-link {
@@ -84,148 +75,84 @@ const navigationClasses = (path = '/') => {
 
   .navigation-item__active .navigation-link {
     color: hsl(13deg 74% 37%);
-    font-weight: 500;
   }
 
-  @media screen and (max-width: 940px) {
-    .left-side, .right-side {
-      width: 34%;
+  .navigation-btn {
+    font-size: 1rem;
+    border: none;
+    cursor: pointer;
+    background: transparent;
+    color: hsl(34deg 19% 26%);
+    text-transform: uppercase;
+  }
+
+  .navigation-btn:active {
+    color: hsl(13deg 74% 37%);
+  }
+
+  @media all and (max-width: 769px) {
+    .navigation-wrapper {
+      background: none;
     }
-  }
 
-  @media screen and (max-width: 768px) {
     .navigation {
-      display: none;
-      top: 68px;
-      left: 25px;
-      position: absolute;
-      background: hsl(0deg 0% 100%);
-      width: 200px;
-      box-shadow: 0 2px 4px hsl(0deg 0% 0% / 15%);
-    }
-
-    .navigation-item {
-      display: block;
-      padding: 0 5px;
-    }
-
-    .navigation-link {
-      display: block;
-      padding: 8px 15px;
-      border-radius: 2px;
-      transition: background 0.3s ease;
-    }
-
-    .navigation-link:hover {
-      background: hsl(45deg 27% 94%);
-    }
-
-    .left-side .navigation {
-      padding-top: 5px;
-      border-radius: 2px 2px 0 0;
-    }
-
-    .left-side .navigation:before, .left-side .navigation:after {
-      content: "";
-      position: absolute;
-      bottom: 100%;
-      left: 20px;
-      border: solid transparent;
-      height: 0;
-      width: 0;
-      pointer-events: none;
-    }
-
-    .left-side .navigation:before {
-      margin-right: -2px;
-      border-color: hsla(0, 0%, 83%, 0);
-      border-bottom-color: hsl(0deg 0% 87%);
-      border-width: 8px;
-    }
-
-    .left-side .navigation:after {
-      border-color: hsla(0, 0%, 100%, 0);
-      border-bottom-color: hsl(0deg 0% 100%);
-      border-width: 6px;
-    }
-
-    .right-side .navigation {
-      top: 145px;
-      padding-bottom: 5px;
-      border-radius: 0 0 2px 2px;
-    }
-
-    .menu-toggle {
-      display: inline-block;
-    }
-  }
-
-  @media screen and (max-width: 600px) {
-    .header {
-      height: 49px;
+      flex-direction: column;
+      align-items: stretch;
+      height: auto;
+      padding: 0;
+      gap: 0.5rem;
+      width: 100%;
     }
 
     .logo-wrapper {
-      top: -24px;
-      margin-left: -66px;
+      margin-top: -2rem;
+      order: 0;
     }
 
-    .logo {
-      width: 129px;
-      height: 97px;
+    .navigation-item {
+      padding: 0.5rem;
+      background: hsl(42deg 28% 84%);
+      text-align: center;
     }
 
-    .left-side, .right-side {
-      padding: 13px 0;
+    .navigation-item__right {
+      order: 0;
     }
 
-    .navigation {
-      top: 48px;
-    }
-
-    .right-side .navigation {
-      top: 125px;
+    .navigation-link {
+      text-align: center;
     }
   }
 </style>
 
 <header class="header">
-  <a href={pageRoute("/")} class="logo-wrapper">
-    <img
-      class="logo"
-      src="/images/logo.svg"
-      alt={DEFAULT_TITLE}
-      title={DEFAULT_TITLE}
-    />
-  </a>
-  <div>
-    <div class="left-side">
-      <button class="menu-toggle" aria-label="Toggle mobile menu link">
-        <div class="svg-icon svg-icon--menu">
-          <svg class="svg-icon__cnt"><use href="#menu-svg-icon"></use></svg>
-        </div>
-      </button>
-      <ul class="navigation">
-        <li class={navigationClasses('/')}>
-          <a class="navigation-link" href={pageRoute("/")}>Головна</a>
-        </li>
-        <li class={navigationClasses('/about')}>
-          <a class="navigation-link" href={pageRoute("/about")}>Про нас</a>
-        </li>
-      </ul>
-    </div>
-    <div class="right-side">
-      <ul class="navigation">
-        <li class={navigationClasses('/podcasts')}>
-          <a class="navigation-link" href={pageRoute("/podcasts")}>Подкасти</a>
-        </li>
-        <li class={navigationClasses('/screencasts')}>
-          <a class="navigation-link" href="https://www.youtube.com/rwpod" target="_blank" rel="noopener noreferrer">
-            Скрінкасти
-          </a>
-        </li>
-      </ul>
-    </div>
+  <div class="navigation-wrapper">
+    <ul class="navigation">
+      <li class="logo-wrapper">
+        <a href={pageRoute("/")}>
+          <img
+            class="logo"
+            src="/images/logo.svg"
+            alt={DEFAULT_TITLE}
+            title={DEFAULT_TITLE}
+          />
+        </a>
+      </li>
+      <li class={navigationClasses('/')}>
+        <a class="navigation-link" href={pageRoute("/")}>Головна</a>
+      </li>
+      <li class={navigationClasses('/about')}>
+        <a class="navigation-link" href={pageRoute("/about")}>Про нас</a>
+      </li>
+      <li class={navigationClasses('/podcasts', true)}>
+        <a class="navigation-link" href={pageRoute("/podcasts")}>Подкасти</a>
+      </li>
+      <li class={navigationClasses('/screencasts', true)}>
+        <button class="navigation-btn">
+          Пошук
+        </button>
+      </li>
+    </ul>
   </div>
 </header>
 
