--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -9,11 +9,14 @@ body {
 }
 
 .wrapper {
+  display: flex;
+  flex-direction: column;
   min-height: 100%;
   height: 100%;
 }
 
 .body {
+  flex: 1;
   margin: 0 auto;
   max-width: 70rem;
   padding: 1.4rem;
